# depthflow

./: .dockerignore  .gitignore  Dockerfile.depthflow-api  deployment.md  pyproject.toml
.github/workflows/: deploy-depthflow-api.yml
deploy/azure-vm/: README.md  depthflow-api.env.example  depthflow-api.service  install-systemd.sh  install.sh  start.sh
deploy/docker/: README.md  compose.yml  deploy.sh  depthflow-api.env.example
depthflow/: __init__.py
depthflow_api/: API.md  README.md  TODO.md  __init__.py  app.py  env.py  jobs.py  models.py  renderer.py  storage.py  subtitles.py  tts.py
scripts/: deploy_depthflow_api.sh  package_depthflow_api.sh  run_depthflow_api.sh  test_image_effects.py
tests/: test_depthflow_api.py
